refactor: alter index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <script src="index.js"></script>
         <h1>Olá Git e Github no VsCode</h1>
+        <p>Altera do VsCode</p>
         
     </body>
 </html>
